towards actual playback

--- a/src/editor.pug
+++ b/src/editor.pug
@@ -2,8 +2,8 @@
 #sidebar
     h1 editor
     .row
-        button(name="restart") restart playtest
-        button(name="save") save
+        button(name="playtest") restart playtest
+        button(name="save" disabled) save
     h2 script
     textarea(name="script" spellcheck="false")
     h2 dialogues
